[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/vr-controllers/VrController.gd" type="Script" id=1]
[ext_resource path="res://player/vr-controllers/ThumbBase.tscn" type="PackedScene" id=2]
[ext_resource path="res://player/vr-controllers/GrabArea.tscn" type="PackedScene" id=3]
[ext_resource path="res://player/vr-controllers/ControllerSharedItems.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/vr-controllers/assets/RightControllerMesh.tscn" type="PackedScene" id=5]
[ext_resource path="res://player/vr-controllers/IndexBase.tscn" type="PackedScene" id=6]

[node name="RightController" type="ARVRController"]
controller_id = 2
script = ExtResource( 1 )

[node name="RightControllerMesh" parent="." instance=ExtResource( 5 )]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="GrabArea" parent="." instance=ExtResource( 3 )]
transform = Transform( -3.09086e-08, -3.09086e-08, 1, -0.707107, 0.707107, 0, -0.707107, -0.707107, -4.37114e-08, 0, -0.03, 0.03 )

[node name="ThumbBase" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.024, 0.006 )

[node name="IndexBase" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.025, -0.055 )

[node name="ControllerSharedItems" parent="." instance=ExtResource( 4 )]

[connection signal="gripping" from="." to="GrabArea" method="try_grab"]
[connection signal="index_pointing" from="." to="IndexBase" method="_on_index_pointing"]
[connection signal="index_rest" from="." to="IndexBase" method="_on_index_rest"]
[connection signal="loose" from="." to="GrabArea" method="release"]
[connection signal="thumb_rest" from="." to="ThumbBase" method="_on_thumb_rest"]
[connection signal="thumb_up" from="." to="ThumbBase" method="_on_thumb_up"]
